[package]
name = "platformer"
version = "0.1.0"
authors = ["Marco Caballero <caballeromarco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.8.0"
euclid = "0.20.8"